--- a/mutopia/templates/results.html
+++ b/mutopia/templates/results.html
@@ -5,18 +5,18 @@
 <div class="row">
   <!-- main body -->
   <div class="col-sm-12">
-    {% if not page %}
+    {% if message %}
     <div class="alert alert-warning" role="alert">
-      <strong>Failed Search</strong> - {{message}}. Please try again.
+      <strong>Failed Search</strong> - {{message}}
     </div>
-    {% else %}
+    {% endif %}
     <div class="row">
       {% include "page_nav.html" %}
     </div>
     <div class="row">
       <h2>Search results</h2>
       <ul>
-        {% for piece in page %}
+        {% for piece in pieces %}
         <li><a href="{% url 'piece-info' piece.piece_id %}">{{piece.title}}</a>
           {% if piece.opus %}, {{piece.opus}}{% endif %}
           {% if piece.date_composed %}, composed in {{piece.date_composed}}{% endif %}
@@ -27,12 +27,13 @@
         <p>No hits for this search.</p>
         {% endfor %}
       </ul>
+      {% if search_time %}
       <p class="timer">Search time: {{search_time}}s.</p>
+      {% endif %}
     </div>
     <div class="row">
       {% include "page_nav.html" %}
     </div>
-    {% endif %}
   </div>
 </div>
 {% endblock %}
