--- a/mutopia/templates/base.html
+++ b/mutopia/templates/base.html
@@ -47,12 +47,12 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="{{ nav_home|default:"inactive"}}"><a href="{% url 'home' %}">Home</a></li>
-            <li class="{{ nav_browse|default:"inactive"}}"><a href="{% url 'browse' %}" >Browse</a></li>
-            <li class="{{ nav_search|default:"inactive"}}"><a href="{% url 'search' %}" >Search</a></li>
-            <li class="{{ nav_legal|default:"inactive"}}"><a href="{% url 'legal' %}">Licensing</a></li>
-            <li class="{{ nav_contribute|default:"inactive"}}"><a href="{% url 'contribute' %}">Contribute</a></li>
-            <li class="{{ nav_contact|default:"inactive"}}"><a href="{% url 'contact' %}">Contact</a></li>
+            {% if active == 'home' %}<li class="active">{% else %}<li>{% endif %}<a href="{% url 'home' %}">Home</a></li>
+            {% if active == 'browse' %}<li class="active">{% else %}<li>{% endif %}<a href="{% url 'browse' %}">Browse</a></li>
+            {% if active == 'search' %}<li class="active">{% else %}<li>{% endif %}<a href="{% url 'search' %}">Search</a></li>
+            {% if active == 'legal' %}<li class="active">{% else %}<li>{% endif %}<a href="{% url 'legal' %}">Legal</a></li>
+            {% if active == 'contribute' %}<li class="active">{% else %}<li>{% endif %}<a href="{% url 'contribute' %}">Contribute</a></li>
+            {% if active == 'contact' %}<li class="active">{% else %}<li>{% endif %}<a href="{% url 'contact' %}">Contact</a></li>
           </ul>
         </div> <!-- .navbar-collapse -->
       </div>
